# nifty

./: README.md  learning_items.db  pyproject.toml
src/nifty/: gui.py  hotkey.py  logic.py  models.py
