[project]
name = "nifty"
version = "0.1.0"
description = "A desktop app for convenient spaced repetition learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput",
    "PyQt6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nifty"]
